[CSS Grid Layout] Use gridRowCount() and gridColumnCount() when possible https://bugs.webkit.org/show_bug.cgi?id=133213

Reviewed by Sergio Villar Senin.

Use gridRowCount() and gridColumnCount() instead of m_grid.size() and
m_grid[0].size() to make the code more descriptive and easier to
understand.

No new tests (No change in behavior).

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::growGrid):
(WebCore::RenderGrid::placeAutoMajorAxisItemOnGrid):


Canonical link: https://commits.webkit.org/151244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169277 268f45cc-cd09-0410-ab3c-d52691b4dbfc